force-app/src/objects/ff_frb__FRBSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of FinancialForce Financial Report Builder.</description>
    <fields>
        <fullName>ff_frb__ExportDefaultLogoFilename__c</fullName>
        <label>Export Default Logo Filename</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ff_frb__ReportColumnLimit__c</fullName>
        <description>You must enter a whole number value between 0 and 99 to define the number of columns displayed in your Financial Report Builder reports.</description>
        <label>Report Column Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ff_frb__ReportRowQueryLimit__c</fullName>
        <description>You must enter a whole number value between 0 and 999,999 to define the number of rows displayed in your Financial Report Builder reports. This setting is overridden by any query limits applied in Analytics.</description>
        <label>Report Row Query Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Report Builder Settings</label>
</CustomObject>